# Artificial-Intelligence-CSE-318-BUET

./: .gitignore  README.md
Offline01/: search.py
Offline01/Missionaries-and-Cannibals/: Constants.py  Graph.py  State.py  in.txt  main.py
Offline01/Missionaries-and-Cannibals/1505015/: Graph.py  State.py  in.txt  main.py
Offline02/nPuzzle/: AStarSearch.h  CMakeLists.txt  Node.h  in.txt  main.cpp  n-puzzle.cpp  test.cpp
Offline02/nPuzzle/1505015/: Node.h  in.txt
Offline02/nPuzzle/Unused/: MinPQ.cpp
Offline03/TSP/: 2OPT.md  3OPT.md  CMakeLists.txt  Dataset.cpp  Heuristics.h  HeuristicsModified.h  HeuristicsRandomized.h  burma14.tsp  in.txt  main.cpp  run-datasets.sh  st70.tsp  tspDS.h
Offline03/TSP/sampleINP/: att48.tsp  burma14.tsp  p_xy.txt.txt  st70.tsp  test.tsp  ulysses16.tsp  ulysses22.tsp
Offline04/: 5.ADVERSARIAL SEARCH.pptx
Offline04/Mancala-MiniMax/: README.md
Offline04/Mancala-MiniMax/src/Algorithms/Minimax/: Minimax.java  MinimaxProblem.java
Offline04/Mancala-MiniMax/src/Mancala/Heuristics/: Heuristic1.java  Heuristic2.java  Heuristic3.java  Heuristic4.java  MancalaHeuristic.java  UserHeuristic.java
Offline04/Mancala-MiniMax/src/Mancala/Player/: Main.java  MancalaBoard.java  Stdin.java
